bug fixes
opening the menu would push content off screen (creating a scrollbar)
but if you scrolled the menu and content would intermingle and look
uggggllllyyyyyy. so now you can't scroll.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@ body {
    background-color: #636162;
    position: relative;
    font-family: "Trebuchet MS", Helvetica, sans-serif;
+   overflow-x: hidden;
 }
 
 a {
@@ -104,6 +105,7 @@ h1 {
 .resume {
    position: relative;
    background-color: #949494;
+
 }
 
 
